[tool.poetry]
name = "x-automation"
version = "0.1.0"
description = ""
authors = ["felipesaadi <felipesaadisiegert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.15.0"
pytz = "^2025.1"
schedule = "^1.2.2"
pymongo = "^4.11.3"
pyts = "^0.13.0"
aiohttp = "^3.11.14"
async-lru = "^2.0.5"
oauthlib = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
